force-app/main/default/objects/Student__c/fields/admissionDate__c.field-meta.xml
<CustomField>
    <fullName>admissionDate__c</fullName>
    <description>Created date</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>admissionDate</label>
    <type>Date</type>
</CustomField>