force-app/main/default/objects/Student__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>