force-app/main/default/objects/Student__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>States__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agra</fullName>
                <default>true</default>
                <label>Agra</label>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Bhilwara</fullName>
            </value>
            <value>
                <fullName>Gurugram</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Jind</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Nagaur</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
            <value>
                <fullName>Vadoara</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>New delhi</fullName>
            </value>
            <value>
                <fullName>North Delhi</fullName>
            </value>
            <value>
                <fullName>East Delhi</fullName>
            </value>
            <value>
                <fullName>Bhopal akki</fullName>
            </value>
            <value>
                <fullName>Raisen district</fullName>
            </value>
            <value>
                <fullName>Sehore district</fullName>
            </value>
            <value>
                <fullName>Vidisha district</fullName>
            </value>
            <value>
                <fullName>Firozabad</fullName>
            </value>
            <value>
                <fullName>Mainpuri</fullName>
            </value>
            <value>
                <fullName>Mathura</fullName>
            </value>
            <value>
                <fullName>Patiala</fullName>
            </value>
            <value>
                <fullName>Ludhiana</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>