force-app/main/default/objects/Student__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax</label>
    <type>TextArea</type>
</CustomField>