force-app/main/default/objects/Student__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>Student full name</description>
    <formula>FirstName__c  &amp; &quot;, &quot; &amp;  LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>