force-app/main/default/objects/Student__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cricket</fullName>
                <default>true</default>
                <label>Cricket</label>
            </value>
            <value>
                <fullName>Dance</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Game</fullName>
            </value>
            <value>
                <fullName>Movies</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Travelling</fullName>
            </value>
            <value>
                <fullName>Kho-Kho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>