force-app/main/default/objects/Student__c/fields/MDRCourse__c.field-meta.xml
<CustomField>
    <fullName>MDRCourse__c</fullName>
    <label>Course Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Course__c.StudentCount__c</field>
            <operation>lessThan</operation>
            <value>6</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>