force-app/main/default/objects/Student__c/fields/RemainingFee__c.field-meta.xml
<CustomField>
    <fullName>RemainingFee__c</fullName>
    <formula>VALUE( TEXT( MDRCourse__r.Fee__c )) - VALUE(TEXT(  Fee__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>