force-app/main/default/objects/Student__c/fields/TotalFees__c.field-meta.xml
<CustomField>
    <fullName>TotalFees__c</fullName>
    <formula>TEXT(MDRCourse__r.Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <type>Text</type>
</CustomField>