force-app/main/default/objects/Student__c/recordTypes/EditeStudentRecordTypes.recordType-meta.xml
<RecordType>
    <fullName>EditeStudentRecordTypes</fullName>
    <active>true</active>
    <label>EditeStudentRecordTypes</label>
</RecordType>