force-app/main/default/objects/Student__c/validationRules/BirthDateValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>BirthDateValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>(TODAY()-BirthDate__c)/365 &lt; 16 || 
 (TODAY()-BirthDate__c)/365 &gt; 25</errorConditionFormula>
    <errorDisplayField>BirthDate__c</errorDisplayField>
    <errorMessage>BirthDay is not valid. Age must be in between 16 to 25</errorMessage>
</ValidationRule>