force-app/main/default/objects/Student__c/validationRules/ContactValidatinRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactValidatinRule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( ContactNumber__c )   &lt;  9</errorConditionFormula>
    <errorDisplayField>ContactNumber__c</errorDisplayField>
    <errorMessage>Contact Number must be 10 digite</errorMessage>
</ValidationRule>