force-app/main/default/objects/Student__c/validationRules/NameLetterValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>NameLetterValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  FirstName__c  ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>FirstName__c</errorDisplayField>
    <errorMessage>Only for charactors allows.</errorMessage>
</ValidationRule>